project(cpp03_examples)
cmake_minimum_required(VERSION 3.0)

find_package(Boost REQUIRED COMPONENTS system chrono thread)
link_libraries(Boost::boost Boost::system Boost::chrono Boost::thread)

add_subdirectory(allocation)
add_subdirectory(buffers)
add_subdirectory(chat)
add_subdirectory(echo)
add_subdirectory(fork)
add_subdirectory(http)
add_subdirectory(icmp)
add_subdirectory(invocation)
add_subdirectory(iostreams)
add_subdirectory(local)
add_subdirectory(multicast)
add_subdirectory(nonblocking)
add_subdirectory(porthopper)
#add_subdirectory(serialization)
add_subdirectory(services)
add_subdirectory(socks4)
add_subdirectory(spawn)
add_subdirectory(ssl)
add_subdirectory(timeouts)
add_subdirectory(timers)
add_subdirectory(tutorial)

IF (WIN32)
    add_subdirectory(windows)
ENDIF()