cmake_minimum_required(VERSION 3.0)
project(cpp03-tutorial)
add_executable(${PROJECT_NAME}-daytime1-client daytime1/client.cpp)
add_executable(${PROJECT_NAME}-daytime2-server daytime2/server.cpp)
add_executable(${PROJECT_NAME}-daytime3-server daytime3/server.cpp)
add_executable(${PROJECT_NAME}-daytime4-client daytime4/client.cpp)
add_executable(${PROJECT_NAME}-daytime5-server daytime5/server.cpp)
add_executable(${PROJECT_NAME}-daytime6-server daytime6/server.cpp)
add_executable(${PROJECT_NAME}-daytime7-server daytime7/server.cpp)
add_executable(${PROJECT_NAME}-timer1 timer1/timer.cpp)
add_executable(${PROJECT_NAME}-timer2 timer2/timer.cpp)
add_executable(${PROJECT_NAME}-timer4 timer3/timer.cpp)
add_executable(${PROJECT_NAME}-timer5 timer3/timer.cpp)